@@ -1,11 +1,9 @@
 {
-  "timestamp" : "2022-05-04T01:39:49Z",
-  "count" : 13,
-  "count_minmax" : [ 13, 13 ],
-  "count_prev_day_inc" : 0,
-  "count_prev_day_dec" : 0,
+  "timestamp" : "2022-05-17T16:29:30Z",
+  "count" : 10,
+  "count_minmax" : [ 10, 13 ],
+  "count_decinc" : [ -3, +0 ],
   "uniques" : 5,
   "uniques_minmax" : [ 5, 5 ],
-  "uniques_prev_day_inc" : 0,
-  "uniques_prev_day_dec" : 0
+  "uniques_decinc" : [ -0, +0 ]
 }
