@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-05-15T08:21:27Z",
+  "timestamp" : "2022-05-17T16:29:30Z",
   "count_outdated" : 172,
   "uniques_outdated" : 115,
-  "count" : 258,
-  "uniques" : 151,
+  "count" : 256,
+  "uniques" : 152,
   "clones" : [
     {
       "timestamp": "2022-05-03T00:00:00Z",
-      "count": 13,
-      "count_minmax": [ 13, 13 ],
+      "count": 10,
+      "count_minmax": [ 10, 13 ],
       "uniques": 5,
       "uniques_minmax": [ 5, 5 ]
     },
@@ -60,6 +60,13 @@
       "count_minmax": [ 0, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2022-05-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
