@@ -1,10 +1,10 @@
 {
-  "count": 86,
-  "uniques": 15,
+  "count": 84,
+  "uniques": 16,
   "clones": [
     {
       "timestamp": "2022-05-03T00:00:00Z",
-      "count": 13,
+      "count": 10,
       "uniques": 5
     },
     {
@@ -41,6 +41,11 @@
       "timestamp": "2022-05-12T00:00:00Z",
       "count": 4,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-05-17T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
